--- a/index.html
+++ b/index.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>QR code component</title>
-  <link rel="stylesheet" href="./styles.css">
-      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body class="bg-[var(--Slate300)] h-screen flex flex-col justify-center items-center">
- <div class="bg-[var(--White)] w-[400px] h-[620px] rounded-[20px] ">
-  <div class="p-4">
-    <img class="rounded-[20px]" src="./images/image-qr-code.png" alt="">
-  </div>
-  <div class="p-8 font-[var(font-family:Outfit, sans-serif)]">
-    <p class="text-center text-[26px] font-bold mb-5 text-sm/s leading-[1.3]">Improve your front-end skills by building projects</p>
-    
-    <p class="text-[20px] text-center opacity-[0.4] text-sm/s leading-[1.1] font-medium ">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
- </div>
+    <title>QR code component</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body
+    class="bg-[var(--Slate300)] h-screen flex flex-col justify-center items-center"
+  >
+    <div class="bg-[var(--White)] w-[450px] h-[700px] rounded-[20px]">
+      <div class="p-8">
+        <img class="rounded-[20px]" src="./images/image-qr-code.png" alt="" />
+      </div>
+      <div class="p-8 font-[var(font-family:Outfit, sans-serif)]">
+        <p
+          class="text-center text-[30px] font-bold mb-5 text-sm/s leading-[1.3]"
+        >
+          Improve your front-end skills by building projects
+        </p>
 
+        <p
+          class="text-[25px] text-center opacity-[0.4] text-sm/s leading-[1.1] font-medium"
+        >
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </div>
 
-
-  <!-- Improve your front-end skills by building projects
+    <!-- Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Joy Uwhokori</a>.
-  </div>
-</body>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Joy Uwhokori</a>.
+    </div>
+  </body>
 </html>
